--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -176,27 +176,53 @@ button:active {
     display: flex;
     flex-wrap: nowrap;
     align-content: flex-start;
-    justify-content: flext-start;
+    justify-content: flex-start;
     background-color: var(--baseYellow);
-    width: 540px;
-    height: 50px;
-    line-height: 153px;
+    height: 80px;
+    line-height: 80px;
     margin: 0;
     padding: 0;
     margin-top: -100px;
 }
 
 .introWords{
-    margin-top:-90px;
+    box-sizing: border-box;
+    margin: 0 auto 0 0;
     font-size: 55pt;
     font-weight: 300;
+    position: relative;
+    top: -53px;
+    overflow: hidden;
+    white-space: nowrap;
+    letter-spacing: 5px;
+    text-align: left;
+    border-right: 4px solid black;
+    animation: 
+        type 7s steps(16) infinite,
+        cursorBlink 0.75s step-end infinite;
 }
 
-/* #jennifer{
-    margin-left: -130px;
-} */
+@keyframes type {
+    0%,
+    15%,
+    100% {
+        width: 1%
+    }
 
-.introCursors{
+    45%,
+    70% {
+        width: 100%
+    }
+}
+
+@keyframes cursorBlink{
+    0% {border-right-color: black;}
+    40% {border-right-color: black;}
+    60% {border-right-color: transparent;}
+    100% {border-right-color: transparent;}
+}
+
+/* .introCursor{
     display: inline-block;
     width: 4px;
     height: 70px;
@@ -214,8 +240,7 @@ button:active {
     40% {opacity: 1;}
     60% {opacity: 0;}
     100% {opacity: 0;}
-}
-
+} */
 
 
 #checkItOut{
