--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -299,21 +299,21 @@ button:active {
 #RectangleCircleOutline{
     width: 100px;
     position: absolute;
-    bottom: 72vh;
-    left: 83vw;
+    top: 175px;
+    right: 150px;
 }
 
 #CircleOutlineSolid1{
     width: 100px;
     position: absolute;
-    bottom:7vw;
-    left: 3%;
+    bottom: 100px;
+    left: 50px;
 }
 
 /* ---------Back to Top Button ------------*/
 #backToTopContainer{
     position: fixed;
-    bottom: 5vh;
+    bottom: 10vh;
     right: 2vw;
     width: 50px;
     display: flex;
@@ -402,14 +402,19 @@ button:active {
     box-sizing: border-box;
     opacity: 0;
     background: var(--baseYellow);
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    /* display: grid;
     grid-template-areas: 
-        "title title"
-        "description description"
-        "langs links";
-    grid-template-rows: 0.7fr 1fr 0.5fr;
-    grid-template-columns: 0.42fr 0.57fr;
-    column-gap: 5%;
+        "title"
+        "description"
+        "langs"
+        "links"; */
+    /* grid-template-rows: 0.25fr 0.25fr 0.25fr 0.25fr; */
+    /* grid-template-columns: 1fr; */
+    /* column-gap: 5%; */
 }
 
 .projects:hover{
@@ -471,28 +476,43 @@ button:active {
     /* display: grid;
     grid-template-areas: 
         "a b"; */
-    column-gap: 20px;
     height: 150px;
 }
 
 .projectLangs, .linksContainer{
     box-sizing: border-box;
-    width: 1fr;
-    height: 150px;
     display: flex;
-    justify-content: center;
     align-items: center;
-    padding: 20px;
     margin: 0;
+    padding: 0;
+    width: 100%;
 }
 
 .projectLangs{
-    border: 1px solid black;
-    display: inline-block;
+    /* border: 1px solid black; */
+    /* display: inline-block; */
     grid-area: langs;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 12pt;
+    letter-spacing: 0.5px;
+    font-weight: 200;
+    text-align: left;
+    justify-content: flex-start;
+    padding: 0;
+    margin: 10px 0;
+    justify-self: flex-start;
 }
 
-.stackHeading{
+.projectLangs span{
+    padding: 0;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 600;
+    font-size: 14pt;
+    margin: 0 7px 0 0;
+    justify-self: flex-start;
+}
+
+/* .stackHeading{
     margin: 0 0 -3px 0;
     padding: 0;
     font-family: Helvetica, Arial, sans-serif;
@@ -514,13 +534,16 @@ button:active {
 
 .stackUL li:last-of-type{
     padding-bottom: 0px;
-}
+} */
 
 
 .linksContainer{
     border: 1px solid black;
     display: inline-block;
     grid-area: links;
+    padding: 20px;
+    justify-content: center;
+    /* height: 150px; */
 }
 
 .projects a img{
@@ -542,7 +565,7 @@ button:active {
     width: 100%;
     color: black;
     font-weight: 100;
-    font-size: 12pt;
+    font-size: 14pt;
     font-family: Helvetica, Arial, sans-serif;
     /* border: 1px solid black; */
 }
@@ -583,10 +606,14 @@ button:active {
 
 #CircleOutlineSolid2{
     width: 100px;
-    position: absolute;
-    top: 2250px;
-    left: 50px;
+    position: relative;
+    /* top: 2250px; */
+    top: 75px;
+    left:-7vw;
     transform: rotate(90deg);
+    margin: 0;
+    padding: 0;
+    display: inline-block;
 }
 /* ------------------- ABOUT SECTION ------------------- */
 
@@ -711,7 +738,7 @@ h4{
     color: black;
     background-color: var(--baseYellow);
     border: 2px solid black;
-    font-size: 1.1rem;
+    font-size: 12pt;
     max-width: 100%;
     transition: background-color 0.1s ease-in-out;
 }
@@ -737,12 +764,12 @@ h4{
 
 #contactForm label {
     font-weight: 600;
-    font-size: 1.5rem;
+    font-size: 14pt;
     font-family: Helvetica, Arial, sans-serif;
 }
 
 #submitButton {
-    font-size: 1.1rem;
+    font-size: 14pt;
     text-align: center;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 600;
