--- a/responsiveStylesheet.css
+++ b/responsiveStylesheet.css
@@ -1,17 +1,307 @@
-@media (max-width: 1700px) {
+@media (max-width: 1850px) {
     .projectTitle {
         font-size: 35pt;
-        margin-bottom: 40px;
     }
 
     .projectDescription{
         font-size: 12pt;
     }
 
-    /* .projectLangs, .linksContainer{
-        padding: 15px;
-    } */
-    .project a{
+    .projectLangs{
+        margin: 2.5% 0;
+    }
+
+    .stackHeader{
+        font-size: 11pt;
+    }
+
+    .langsList{
         font-size: 10pt;
     }
+
+    .projects a{
+        font-size: 11pt;
+        padding: 2px 0;
+    }
+
+    .projects a img{
+        width: 18px;
+    }
+}
+
+@media (max-width: 1600px) {
+    .infoContainer{
+        padding: 7%;
+    }
+
+    .projectTitle {
+        font-size: 32pt;
+    }
+
+    .projectDescription{
+        font-size: 11pt;
+    }
+
+    .stackHeader{
+        font-size: 10.5pt;
+    }
+
+    .langsList{
+        font-size: 9.5pt;
+    }
+
+    .projects a{
+        font-size: 10pt;
+        padding: 1px 0;
+    }
+
+    .projects a img{
+        width: 16px;
+    }
+}
+
+@media (max-width: 1400px) {
+
+/*----------- splash box -----------*/
+    #introBox{
+        height: 70px;
+    }
+
+    .introWords{
+        font-size: 40pt;
+        top: -47px;
+    }
+
+    #splashList{
+        font-size: 18pt;
+    }
+
+/*----------- Portfolio Section -----------*/
+    #portfolioContainer {
+        grid-template-columns: 1fr 1fr;
+        grid-row-gap: 6vw;
+    }
+
+    .projects{
+        width: 35vw;
+        height: 35vw;
+        
+    }
+
+    .infoContainer{
+        height: 35vw;
+    }
+
+    .projectTitle {
+        font-size: 40pt;
+    }
+
+    .projectDescription{
+        font-size: 13pt;
+    }
+
+    .stackHeader{
+        font-size: 12pt;
+    }
+
+    .langsList{
+        font-size: 11pt;
+    }
+
+    .projects a{
+        font-size: 12pt;
+        padding: 2px 0;
+    }
+
+    .projects a img{
+        width: 20px;
+    }
+}
+
+@media (max-width: 1150px) {
+    #splashbox{
+        grid-template-areas: 
+            'a a a'
+            '. b c';
+        grid-template-rows: 0.75fr 1.25fr;
+        grid-template-columns: 0.75fr 50px 1.25fr;
+        grid-gap: 0;
+        padding: 0;
+    }
+
+    #introBox{
+        grid-area: a;
+        margin-bottom: -40%;
+        justify-self: flex-start;
+        height: 90px;
+    }
+
+    .introWords{
+        font-size: 60pt;
+    }
+
+    #lineBox{
+        grid-area: b;
+        display: flex;
+        align-content: flex-start;
+        padding: 0;
+        margin: 0;
+    }
+
+    #verticalLine{
+        height: 40vh;
+        /* margin-top: -100px; */
+    }
+
+    #checkItOut{
+        top: 0;
+        font-size: 14pt;
+    }
+
+    #checkItOut span{
+        font-size: 25pt;
+        position: relative;
+        left: 3px;
+    }
+
+    #splashList{
+        grid-area: c;
+        top: 0;
+        font-size: 24pt;
+        line-height: 54pt;
+    }
+
+/* ------- About Section -------*/
+    #arrows{
+        width: 250px;
+        /* margin-top: 20px */
+    }
+
+}
+
+@media (max-width: 1075px) {
+    #splashbox{
+        grid-template-columns: 0.3fr 50px 1.6fr;
+    }
+
+    .projectTitle {
+        font-size: 32pt;
+    }
+
+    .projectDescription{
+        font-size: 12pt;
+        margin: 5px 0 0 0;
+    }
+
+    .stackHeader{
+        font-size: 11pt;
+    }
+
+    .projectLangs{
+        margin: 5px 0;
+    }
+
+    .langsList{
+        font-size: 10pt;
+    }
+
+    .linksContainer{
+        padding: 10px 15px;
+    }
+
+    .projects a{
+        font-size: 11pt;
+        padding: 0;
+        letter-spacing: 0px;
+    }
+
+    .projects a img{
+        width: 18px;
+    }
+
+/* ------- About Section -------*/
+    #arrows{
+        width: 225px;
+    }
+
+/* ------- Contact Section -------*/
+    #contactForm{
+        width: 95%;
+    }
+
+    #contactOutline{
+        width: 95%;
+    }
+}
+
+@media (max-width: 825px) {
+    #introBox{
+        align-self: flex-end;
+        margin-bottom: 0;
+        height: 75px;
+    }
+
+    .introWords{
+        font-size: 45pt;
+    }
+
+    #splashList{
+        box-sizing: border-box;
+        font-size: 20pt;
+        width: 100%;
+        padding: 0 0 0 10%;
+    }
+
+    #CircleOutlineSolid1{
+        bottom: -50px;
+    }
+/* ------- Portfolio Section -------*/
+    #portfolioContainer {
+        grid-template-columns: 1fr;
+        grid-row-gap: 6vw;
+    }
+
+    .projects{
+        width: 78vw;
+        height: 78vw;
+        
+    }
+
+    .infoContainer{
+        height: 78vw;
+    }
+
+/* ------- About Section -------*/
+    #arrows{
+        width: 30%;
+        margin-top: 20px
+    }
+
+    .langGroup:first-of-type{
+        margin: 0 2.5% 0 0;
+    }
+
+    .langGroup:last-of-type{
+        margin: 0 0 0 2.5%;
+    }
+
+    .borderSquare{
+        width: 250px;
+        height: 250px;
+        margin: 0;
+        /* margin-top: -25px;
+        margin-right: 13px; */
+    }
+
+    .langsContents{
+        width: 250px;
+        height: 250px;
+        position: relative;
+        top: -275px;
+        padding: 10%;
+    }
+
+
+/* ------- Contact Section -------*/
+
 }
