more mobile styling

--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -33,8 +33,8 @@ h2 {
     font-weight: 700;
     font-style: normal;
     font-size: 3.5rem;
-    line-height: 2.3rem;
-    margin: 0 0 40px 0;
+    line-height: 115%;
+    margin: 0 0 30px 0;
 }
 
 .h2Animation{
@@ -94,7 +94,7 @@ button:active {
     height: auto;
 }
 
-#fullLogo{
+#headerFullLogo{
     box-sizing: border-box;
     width: 250px;
     margin: 0;
@@ -103,7 +103,7 @@ button:active {
     top: 5px;
 }
 
-#navbar nav {
+#headerNav {
     width: 323px;
     height: 20px;
     display: grid;
@@ -116,7 +116,7 @@ button:active {
     /* border: 1px solid black; */
 }
 
-#navbar nav a {
+#headerNav a {
     text-decoration: none;
     color: black;
     font-weight: 700;
@@ -829,6 +829,10 @@ footer{
     box-sizing: border-box;
 }
 
+#footerFullLogo{
+    width: 250px;
+}
+
 footer nav {
     display: grid;
     grid-template-columns: 3.1rem 4.6rem 3.2rem 4.1rem;
@@ -839,7 +843,6 @@ footer nav {
     vertical-align: baseline;
     /* border: 1px solid black; */
 }
-
 
 footer a{
     text-decoration: none;
