--- a/responsiveStylesheet.css
+++ b/responsiveStylesheet.css
@@ -61,8 +61,7 @@
 }
 
 @media (max-width: 1400px) {
-
-/*----------- splash box -----------*/
+    /*----------- splash box -----------*/
     #introBox{
         height: 70px;
     }
@@ -76,7 +75,7 @@
         font-size: 18pt;
     }
 
-/*----------- Portfolio Section -----------*/
+    /*----------- Portfolio Section -----------*/
     #portfolioContainer {
         grid-template-columns: 1fr 1fr;
         grid-row-gap: 6vw;
@@ -119,6 +118,7 @@
 }
 
 @media (max-width: 1150px) {
+    /*----------- splash box -----------*/
     #splashbox{
         grid-template-areas: 
             'a a a'
@@ -180,10 +180,12 @@
 }
 
 @media (max-width: 1075px) {
+    /*----------- splash box -----------*/
     #splashbox{
         grid-template-columns: 0.3fr 50px 1.6fr;
     }
 
+    /* ------- Portfolio Section -------*/
     .projectTitle {
         font-size: 32pt;
     }
@@ -219,12 +221,12 @@
         width: 18px;
     }
 
-/* ------- About Section -------*/
+    /* ------- About Section -------*/
     #arrows{
         width: 225px;
     }
 
-/* ------- Contact Section -------*/
+    /* ------- Contact Section -------*/
     #contactForm{
         width: 95%;
     }
@@ -235,6 +237,7 @@
 }
 
 @media (max-width: 825px) {
+    /*----------- splash box -----------*/
     #introBox{
         align-self: flex-end;
         margin-bottom: 0;
@@ -255,10 +258,10 @@
     #CircleOutlineSolid1{
         bottom: -50px;
     }
-/* ------- Portfolio Section -------*/
+    /* ------- Portfolio Section -------*/
     #portfolioContainer {
         grid-template-columns: 1fr;
-        grid-row-gap: 6vw;
+        grid-row-gap:9vw;
     }
 
     .projects{
@@ -271,11 +274,48 @@
         height: 78vw;
     }
 
-/* ------- About Section -------*/
+    .projectTitle {
+        font-size: 45pt;
+        margin-bottom: -40px;
+    }
+
+    .projectDescription{
+        font-size: 14pt;
+        margin: 5px 0 0 0;
+    }
+
+    .stackHeader{
+        font-size: 13pt;
+    }
+
+    .projectLangs{
+        margin: 5px 0;
+    }
+
+    .langsList{
+        font-size: 12pt;
+    }
+
+    .linksContainer{
+        padding: 15px;
+    }
+
+    .projects a{
+        font-size: 13pt;
+        padding: 0;
+        letter-spacing: 0px;
+    }
+
+    .projects a img{
+        width: 20px;
+    }
+
+    /* ------- About Section -------*/
     #arrows{
         width: 30%;
         margin-top: 20px
     }
+
 
     .langGroup:first-of-type{
         margin: 0 2.5% 0 0;
@@ -300,16 +340,18 @@
         top: -275px;
         padding: 10%;
     }
-
-
-/* ------- Contact Section -------*/
 }
 
 @media (max-width: 650px) {
+    /* ------- Mobile Nav -------*/
     #navbar{
         align-items: center;
         padding: 20px;
         height: auto; 
+    }
+
+    #navbar nav{
+        display: none;
     }
     
     #menuIcon{
@@ -317,9 +359,146 @@
         width: 35px;
         padding-right: 5px;
         top: 0;
+        cursor: pointer;
     }
 
-    #navbar nav{
-        display: none;
+    #hamburgerNav{
+        position: absolute;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        align-items: center;
+        top: 10px;
+        right: 10px;
+        font-size: 16pt;
+        padding: 15px;
+        margin: 0;
+        border: 2px solid black;
+        width: 100px;
+        height: auto;
+        background-color: white;
+        box-shadow: 10px 10px 0 rgb(105, 105, 105);
+    }
+
+    #hamburgerNav a{
+        text-decoration: none;
+        color: black;
+        font-weight: 700;
+        font-family: Helvetica, Arial, sans-serif;
+        font-size: 1.1rem;
+        text-align: left;
+        vertical-align: baseline;
+        width: 100%;
+        line-height: 200%;
+    }
+
+    #homeLink div{
+        width: 100%;
+    }
+
+    #portfolioLink div{
+        width: 100%;
+    }
+
+    #aboutLink div{
+            width: 100%;
+    }
+
+    #contactLink div{
+        width: 100%;
+    }
+    /*----------- splash box -----------*/
+    #introBox{
+        height: 65px;
+    }
+
+    .introWords{
+        font-size: 35pt;
+    }
+
+    #splashList{
+        font-size: 16pt;
+        line-height: 125%;
+    }
+
+    #splashList li:nth-of-type(2){
+        padding: 45px 0;
+    }
+
+    #checkItOut{
+        font-size: 12pt;
+    }
+
+    #checkItOut span{
+        font-size: 20pt;
+        left: 2px;
+    }
+
+    /* ------- Portfolio Section -------*/
+    .projectTitle {
+        font-size: 35pt;
+        margin-bottom: -10px;
+    }
+
+    /* ------- About Section -------*/
+    #langs{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        height: calc(2 * 250px + 100px);
+    }
+
+    .langGroup{
+        margin: 0 0 0 0;
+        padding: 0;
+        height: 250px;
+        width: 100%;
+        padding: 0 25%;
+    }
+
+    .langGroup:first-of-type{
+        margin: 0 0 5% 0;
+    }
+
+    .langGroup:last-of-type{
+        margin: 5% 0 0 0;
+    }
+
+    .borderSquare{
+        margin: 0;
+    }
+
+    /* ------- Footer -------*/
+    #footerOutline2{
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-end;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+
+    #footerFullLogo{
+        width: 150px;
+        padding: 10px 10px 0 10px
+    }
+    
+}
+
+@media (max-width: 475px) {
+    /*----------- splash box -----------*/
+    #splashbox{
+        width: 100%;
+        grid-template-areas: 
+            'a a'
+            'b c';
+        grid-template-columns: 50px 100%;
+    }
+    
+    #introBox{
+        height: 20vw;
+    }
+
+    .introWords{
+        font-size: 10.5vw;
     }
 }
