--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -343,7 +343,8 @@ button:active {
     width: 50px;
     border-radius: 50%;
     box-sizing: border-box;
-    box-shadow: 5px 5px 25px -2px #c0c0c0;
+    /* box-shadow: 5px 5px 25px -2px #c0c0c0; */
+    box-shadow: 3px 3px 0 rgb(105, 105, 105);
     transition: height 0.5s ease-in-out, width 0.5s ease-in-out, padding 0.5s ease-in-out;
     display: flex;
     justify-content: center;
@@ -406,6 +407,10 @@ button:active {
 .projects:hover .infoContainer{
     opacity: 0.96;
     cursor: default;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .infoContainer{
@@ -415,19 +420,9 @@ button:active {
     box-sizing: border-box;
     opacity: 0;
     background: var(--baseYellow);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-    /* display: grid;
-    grid-template-areas: 
-        "title"
-        "description"
-        "langs"
-        "links"; */
-    /* grid-template-rows: 0.50fr 0.20fr 0.15fr 0.35fr; */
-    /* grid-template-columns: 1fr; */
+    visibility: none;
 }
+    
 
 .projectTitle {
     font-family: Helvetica, Arial, sans-serif;
@@ -638,6 +633,10 @@ button:active {
     margin-top: 20px
 }
 
+#wavyArrows{
+    display: none;
+}
+
 h3{
     font-family: Helvetica, Arial, sans-serif;
     font-size: 2.25rem;
@@ -835,7 +834,7 @@ footer{
 
 footer nav {
     display: grid;
-    grid-template-columns: 3.1rem 4.6rem 3.2rem 4.1rem;
+    grid-template-columns: 50px 74px 52px 66px;
     grid-column-gap: 20px;
     margin: 0;
     padding: 0;
@@ -849,12 +848,12 @@ footer a{
     color: black;
     font-weight: 700;
     font-family: Helvetica, Arial, sans-serif;
-    font-size: 1.1rem;
+    font-size: 12pt;
     text-align: center;
     vertical-align: baseline;
 }
 
-    #homeLink div{
+    /* #homeLink div{
         width: 3.1rem;
     }
 
@@ -868,7 +867,7 @@ footer a{
 
     #contactLink div{
         width: 4.1rem;
-    }
+    } */
 
 footer a div{
     transition: background-color 0.2s ease-in-out;
