--- a/responsiveStylesheet.css
+++ b/responsiveStylesheet.css
@@ -171,6 +171,11 @@
         line-height: 54pt;
     }
 
+    #RectangleCircleOutline{
+        top: 150px;
+        right: 50px;
+    }
+
 /* ------- About Section -------*/
     #arrows{
         width: 250px;
@@ -302,7 +307,7 @@
 
     .projects a{
         font-size: 13pt;
-        padding: 0;
+        padding: 10px 0;
         letter-spacing: 0px;
     }
 
@@ -439,6 +444,11 @@
         margin-bottom: -10px;
     }
 
+    .projects a{
+        padding: 5px 0;
+        letter-spacing: 0px;
+    }
+
     /* ------- About Section -------*/
     #langs{
         display: flex;
@@ -485,20 +495,318 @@
 }
 
 @media (max-width: 475px) {
+    /*----------- General -----------*/
+    main{
+        padding: 5vw;
+    }
+
+    section{
+        padding-top: 150px;
+    }
+
+    section:last-of-type{
+        margin-bottom: -50px;
+    }
+    
+    h2{
+        font-size: 30pt;
+        margin-bottom: 15px;
+    }
+
+    #portfolio h2{
+        margin-bottom: 25px;
+    }
+
+    #contact h2{
+        margin-bottom: 60px;
+    }
+    
+    /*----------- nav bar -----------*/
+    #headerFullLogo{
+        width: 200px;
+        margin-top: -5px;
+    }
+
+    /*----------- Back To Top Button -----------*/
+    #backToTopContainer{
+       right: 10px;
+    }
+    
+    #circle{
+        width: 40px;
+        height: 40px;
+    }
+
+    #arrow{
+        width: 11px;
+    }
+
+    #circle:hover{
+        height: 45px;
+        width: 45px;
+        padding: 5px;
+    }
+    
+    #circle:hover #arrow{
+        width: 15px;
+    }
+
     /*----------- splash box -----------*/
     #splashbox{
         width: 100%;
         grid-template-areas: 
             'a a'
             'b c';
-        grid-template-columns: 50px 100%;
+        grid-template-columns: 25px 100%;
+        grid-template-rows: 0.55fr 1.45fr;
     }
     
     #introBox{
-        height: 20vw;
+        /* height: 12vw; */
+        height: auto;
+        margin-bottom: 0px;
     }
 
     .introWords{
-        font-size: 10.5vw;
+        font-size: 22pt;
+        letter-spacing: 3px;
+        border-right: 2px solid black;
+        top: -18px;
+        /* positioN: static; */
+        /* height: 150%; */
+        line-height: 115%;
     }
+
+    #lineBox{
+        justify-self: flex-start;
+    }
+
+    #verticalLine{
+        width: 1px;
+        margin: 0;
+    }
+
+    #checkItOut{
+        font-size: 9pt;
+    }
+
+    #checkItOut span{
+        font-size: 15pt;
+        left: 1.75px;
+    }
+
+    #splashList{
+        font-size: 13pt;
+        padding-left: 10px;
+    }
+
+    #RectangleCircleOutline{
+        width: 50px;
+        top: 100px;
+        right: 10px;
+    }
+
+    #CircleOutlineSolid1{
+        width: 50px;
+        top: 95%;
+        
+    }
+
+    /*----------- Portfolio -----------*/
+    #dots{
+        width: 50px;
+        left: auto;
+        right: 10px;
+        bottom: -90px;
+    }
+
+    #CircleOutlineSolid2{
+        width: 60px;
+        left: 5px;
+        top: 40px;
+    }
+
+    /*----------- About Me -----------*/
+    #aboutParagraph{
+        font-size: 12pt;
+        line-height: 200%;
+    }
+
+    h3{
+        font-size: 20pt;
+        margin-bottom: 70px;
+        margin-top: 0;
+    }
+
+    .stackSubHeading{
+        font-size: 16pt;
+    }
+
+    #arrows{
+        display: none;
+    }
+
+    #wavyArrows{
+        display: block;
+        width: 150px;
+        margin: 10px 0 10px 0;
+    }
+    
+    #langs{
+        height: 450px;
+        width: 100%;
+    }
+    
+    .langGroup{
+        margin: 0;
+        padding: 0;
+        height: 200px;
+        width: 200px;
+        padding: 0;
+    }
+
+    .langGroup:first-of-type{
+        margin: 0 0 5% 0;
+    }
+
+    .langGroup:last-of-type{
+        margin: 5% 0 0 0;
+    }
+
+    .langsContents{
+        width: 200px;
+        height: 200px;
+        top: -224px;
+    }
+
+    h4{
+        font-size: 18pt;
+        margin-bottom: 5px;
+    }
+
+    .langsContents ul{
+        font-size: 12pt;
+        line-height: 200%;
+    }
+
+
+    .borderSquare{
+        margin: 0;
+        height: 200px;
+        width: 200px;
+    }
+    /*----------- Portfolio -----------*/
+    .projects{
+        width: 83vw;
+        height: 83vw;
+        
+    }
+
+    .projects:hover{
+        transform: scale(1.035) translateX(5px) ;
+    }
+
+    .infoContainer{
+        height: 83vw;
+    }
+
+
+    .projectTitle{
+        font-size: 25pt;
+        margin-bottom: 0;
+    }
+
+    .projectDescription{
+        font-size: 10pt;
+    }
+
+    .projectLangs{
+        padding: 8px;
+    }
+
+    .stackHeader{
+        font-size: 9pt;
+        margin-bottom: -1px;
+    }
+
+    .langsList{
+        font-size: 9pt;
+    }
+
+    .linksContainer{
+        padding: 8px;
+    }
+
+    .linksContainer a{
+        font-size: 9pt;
+    }
+
+    .projects a img{
+        width: 15px;
+    }
+
+    /*----------- Contact -----------*/
+    #contact{
+        height: 550px;
+    }
+    
+    #contactOutline{
+        bottom: 430px;
+        height: 400px;
+    }
+
+    #contactForm{
+        padding: 20px 30px 40px 20px;
+        left: 15px;
+        bottom: 15px;
+        height: 400px;
+        justify-content: space-between;
+    }
+
+    #contactForm label {
+        font-size: 12pt;
+        margin-bottom: -25px;
+    }    
+
+    .formField{
+        font-size: 10pt;
+        margin: 0;
+        padding: 5px;
+    }
+
+    #submitButton{
+        font-size: 12pt;
+        margin: 0;
+        padding: 8px 4px;
+        width: 80px;
+    }
+    /* ------- Footer -------*/
+    
+    #footerOutline1{
+        width: 90%;
+        margin-left: -8px;
+    }
+
+    #footerOutline2{
+        width: 100.2%;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-end;
+        padding: 15px 15px 20px 15px;
+        box-sizing: border-box;
+    }
+
+    footer nav{
+        width: auto;
+        grid-template-columns: 37px 55px 38px 49px;
+        grid-column-gap: 20px;
+        margin-bottom: 5px;
+
+    }
+
+    footer a{
+        font-size: 10pt;
+
+    }
+
 }
