--- a/responsiveStylesheet.css
+++ b/responsiveStylesheet.css
@@ -591,12 +591,13 @@
     }
 
     #lineBox{
-        justify-self: flex-start;
+        justify-self: flex-end;
+        margin: -50px 0 0 0;
     }
 
     #verticalLine{
         width: 1px;
-        margin: 0;
+        
     }
 
     #checkItOut{
@@ -610,7 +611,8 @@
 
     #splashList{
         font-size: 13pt;
-        padding-left: 10px;
+        padding-left: 25px;
+        margin: -50px 0 0 0;
     }
 
     #RectangleCircleOutline{
