--- a/responsiveStylesheet.css
+++ b/responsiveStylesheet.css
@@ -377,8 +377,8 @@
         padding: 15px;
         margin: 0;
         border: 2px solid black;
-        width: 125px;
-        height: 250px;
+        width: 150px;
+        height: 275px;
         background-color: white;
         box-shadow: 10px 10px 0 rgb(105, 105, 105);
         z-index: 3;
@@ -389,7 +389,7 @@
         color: black;
         font-weight: 700;
         font-family: Helvetica, Arial, sans-serif;
-        font-size: 18pt;
+        font-size: 22pt;
         text-align: left;
         vertical-align: baseline;
         width: 100%;
@@ -400,8 +400,8 @@
 
     #hamburgerNav div{
         /* background-color: var(--drkYellow);  */
-        height: 7px;
-        top: 1px;
+        height: 13px;
+        top: -4px;
         padding: 0;
         position: relative;
         z-index: -1;
@@ -409,19 +409,19 @@
     }
 
         #hamHomeUnderline{
-            width: 65px;
+            width: 80px;
         }
 
         #hamPortfolioUnderline{
-            width: 98px;
+            width: 119px;
         }
 
         #hamAboutUnderline{
-            width: 67px;
+            width: 82px;
         }
 
         #hamContactUnderline{
-            width: 87px;
+            width: 107px;
         }
     /*----------- splash box -----------*/
     #introBox{
@@ -597,8 +597,8 @@
 
     #verticalLine{
         width: 2px;
-        
-        
+        position: relative;
+        z-index: 1;
     }
 
     #checkItOut{
