--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -657,10 +657,10 @@ h3{
 
 h4{
     font-family: Helvetica, Arial, sans-serif;
-    font-size: 1.7rem;
-    font-weight: 100;
+    font-size: 16pt;
+    font-weight: 600;
     text-decoration: black underline 1.5pt;
-    margin: 0 0 0 0.6rem;
+    margin: 0 0 7px 0.6rem;
 }
 
 #langs{
@@ -679,7 +679,7 @@ h4{
     box-sizing: border-box;
     width: 285px;
     height: 285px;
-    padding: 75px;
+    padding: 60px;
     position: relative;
     z-index: -1;
     bottom: 308px;
