--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -782,7 +782,8 @@ h5:first-of-type{
 
 .resumeSubheader{
     letter-spacing: 0.5px;
-    font-size: 12.5;
+    font-size: 11.25pt;
+    line-height: 185%;
 }
 
 #FM{
@@ -790,7 +791,7 @@ h5:first-of-type{
 }
 
 #Pepperdine{
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 #resume ul .subBullets{
