--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -778,12 +778,13 @@ h5:first-of-type{
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 700;
     font-size: 13pt;
+    padding-bottom: 15px;
 }
 
 .resumeSubheader{
     letter-spacing: 0.5px;
     font-size: 11.25pt;
-    line-height: 185%;
+    font-weight: 400;
 }
 
 #FM{
