--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -299,13 +299,17 @@ header nav a div{
     font-family: "Helvetica";
     font-size: 22pt;
     list-style-type: none;
-    text-decoration: 2px underline black;
+    /* text-decoration: 2px underline black; */
     line-height: 55px;
     width: calc(100% / 2 - 2px - (125 * 2));
     padding: 0;
     margin: 0;
     position: relative;
     top: 140px;
+}
+
+#splashList li{
+    text-decoration: 1.5px underline black;
 }
 
 #splashList .accent{
@@ -655,11 +659,11 @@ h3{
     justify-content: center;
 }
 
-h4{
+.stackSubHeading{
     font-family: Helvetica, Arial, sans-serif;
     font-size: 16pt;
     font-weight: 600;
-    text-decoration: black underline 1.5pt;
+    text-decoration: black underline 1px;
     margin: 0 0 7px 0.6rem;
 }
 
