--- a/responsiveStylesheet.css
+++ b/responsiveStylesheet.css
@@ -124,7 +124,7 @@
             'a a a'
             '. b c';
         grid-template-rows: 0.75fr 1.25fr;
-        grid-template-columns: 0.75fr 50px 1.25fr;
+        grid-template-columns: 0.75fr 40px 1.25fr;
         grid-gap: 0;
         padding: 0;
     }
@@ -150,12 +150,16 @@
 
     #verticalLine{
         height: 40vh;
+        display: none;
         /* margin-top: -100px; */
     }
 
     #checkItOut{
         top: 0;
+        margin: 0;
         font-size: 14pt;
+        border-left: 1.5px solid black;
+        height: 45vh;
     }
 
     #checkItOut span{
@@ -165,10 +169,13 @@
     }
 
     #splashList{
+        box-sizing: border-box;
         grid-area: c;
         top: 0;
         font-size: 24pt;
         line-height: 54pt;
+        /* border-left: 1.5px solid black; */
+
     }
 
     #RectangleCircleOutline{
