--- a/responsiveStylesheet.css
+++ b/responsiveStylesheet.css
@@ -843,8 +843,9 @@
     #submitButton{
         font-size: 12pt;
         margin: 0;
-        padding: 8px 4px;
+        /* padding: 8px 4px; */
         width: 80px;
+        height: 40px;
     }
     /* ------- Footer -------*/
     
