--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -7,17 +7,19 @@ html {
     box-sizing: border-box;
 }
 
-body {
-    margin: 0;
-    font-family: museo-slab, 'Courier New', monospace;
-    width: 100%;
-    box-sizing: border-box;
-}
-
 :root{
     --drkYellow: #ffbf47;
     --baseYellow: #ffcd70;
     --ltYellow: #ffe2ad;
+    --serifFont: museo-slab, 'Courier New', monospace;
+    --sansSerifFont: "Inter", Arial, sans-serif;
+}
+
+body {
+    margin: 0;
+    font-family: var(--serifFont);
+    width: 100%;
+    box-sizing: border-box;
 }
 
 main {
@@ -29,17 +31,17 @@ main {
 
 /* section headers */
 h2 {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: var(--sansSerifFont);;
     font-weight: 700;
     font-style: normal;
-    font-size: 3.5rem;
+    font-size: 45pt;
     line-height: 115%;
-    margin: 0 0 30px 0;
+    margin: 0 0 40px 0;
 }
 
-.h2Animation{
+.headingAnimation{
     animation-name: slideIn;
-    animation-duration: 1s;
+    animation-duration: 0.8s;
     animation-iteration-count: 1;
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
@@ -48,7 +50,7 @@ h2 {
 @keyframes slideIn{
     0% {
         opacity: 0;
-        transform: translateY(20px);
+        transform: translateY(40px);
     }
     100% {
         opacity: 1;
@@ -105,6 +107,11 @@ button:active {
     padding: 0;
     position: relative;
     top: 5px;
+    transition: transform 0.2s ease-in-out;
+}
+
+#headerFullLogo:hover{
+    transform: scale(1.05);
 }
 
 #headerNav {
@@ -124,11 +131,11 @@ header nav a {
     text-decoration: none;
     color: black;
     font-weight: 700;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: var(--sansSerifFont);;
     font-size: 1.1rem;
     text-align: center;
     vertical-align: baseline;
-    transition: background-color 0.2s ease-in-out;
+    transition: background-color 0.3s ease-in-out;
 }
 
 header nav a:hover{
@@ -283,7 +290,7 @@ header nav a div{
 #checkItOut:hover,
 #checkItOut:active,
 #checkItOut:focus{
-    font-weight: 700;
+    /* font-weight: 700; */
     transform: scale(1.075) rotate(180deg);
 }
 
@@ -309,7 +316,7 @@ header nav a div{
 }
 
 #splashList li{
-    text-decoration: 1.5px underline black;
+    text-decoration: 2px solid underline black;
 }
 
 #splashList .accent{
@@ -359,7 +366,7 @@ header nav a div{
     box-sizing: border-box;
     /* box-shadow: 5px 5px 25px -2px #c0c0c0; */
     box-shadow: 3px 3px 0 rgb(105, 105, 105);
-    transition: height 0.5s ease-in-out, width 0.5s ease-in-out, padding 0.5s ease-in-out;
+    transition: transform 0.3s ease-in-out, padding 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -368,16 +375,16 @@ header nav a div{
 #arrow{
     text-decoration: none;
     width: 15px;
-    transition: width 0.5s ease-in-out
+    transition: transform 0.3s ease-in-out
 }
 #circle:hover{
-    height: 60px;
-    width: 60px;
+    transform: scale(1.1);
+    box-shadow: 5px 5px 0 rgb(138, 137, 137);
     padding: 5px;
 }
 
 #circle:hover #arrow{
-    width: 20px;
+    transform: scale(1.1);
 }
 
 
@@ -411,20 +418,25 @@ header nav a div{
     background-origin: border-box;
     background-size: 100%;
     box-shadow: 10px 10px 0 rgb(105, 105, 105);
-    transition: transform 0.6s ease-in-out;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .projects:hover{
     transform: scale(1.075);
+    box-shadow: 15px 15px 0 rgb(150, 150, 150);
+}
+
+.infoContainer{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .projects:hover .infoContainer{
     opacity: 0.96;
     cursor: default;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
 }
 
 .infoContainer{
@@ -439,12 +451,12 @@ header nav a div{
     
 
 .projectTitle {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: var(--sansSerifFont);;
     font-size: 40pt;
-    margin: 0;
+    margin: 0 0 25px 0;
     width: 100%;
     line-height: 100%;
-    grid-area: title;
+    /* grid-area: title; */
 }
 
 .projectDescription {
@@ -456,7 +468,7 @@ header nav a div{
     /* position: relative;
     top: -20px;
     grid-area: description; */
-    /* font-family: Helvetica, Arial, sans-serif; */
+    /* font-family: var(--sansSerifFont);; */
 }
 
 /* .lowerTile{
@@ -466,47 +478,48 @@ header nav a div{
     height: 150px;
 } */
 
-.projectLangs, .linksContainer{
+/* .projectLangs, .linksContainer{
     box-sizing: border-box;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     padding: 0;
     width: 100%;
-}
+} */
 
 .projectLangs{
     /* border: 1px solid black; */
     /* display: inline-block; */
-    grid-area: langs;
-    /* font-family: Helvetica, Arial, sans-serif;   */
+    /* grid-area: langs; */
     /* text-align: left; */
-    padding: 10px;
-    margin: 10px 0;
+    /* padding: 10px; */
+    /* font-family: var(--sansSerifFont);;   */
+    margin: 0px 0 5px 0;
     flex-wrap: wrap;
-    border: 1px solid black;
-    margin: 5% 0;
+    /* border: 1px solid black; */
 }
 
-.stackHeader{
+/* .stackHeader{
     padding: 0;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: var(--sansSerifFont);;
     font-weight: 600;
     font-size: 12pt;
     margin: 0 0 3px 0;
     width: 100%;
-}
+} */
 
 .langsList{
-    font-size: 11pt;
-    letter-spacing: 0.5px;
+    font-size: 10pt;
+    letter-spacing: 1.5px;
     font-weight: 300;
     margin: 0;
+    line-height: 100%;
 }
 
 /* .stackHeading{
     margin: 0 0 -3px 0;
     padding: 0;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: var(--sansSerifFont);;
     font-weight: 600;
     font-size: 12.5pt;
 }
@@ -529,44 +542,83 @@ header nav a div{
 
 
 .linksContainer{
-    border: 1px solid black;
-    display: inline-block;
-    grid-area: links;
-    padding: 15px;
-    justify-content: center;
+    /* border: 1px solid black; */
+    display: flex;
+    /* grid-area: links; */
+    box-sizing: border-box;
+    /* margin-top: 10px; */
+    width: auto;
+    height: auto;
+    margin-top: 15px;
+        /* width: 200px;
+    height: 30px; */
+    /* padding: 15px; */
+    /* justify-content: flex-start;
+    align-items: center; */
+    /* background-color: rgb(153, 153, 153); */
     /* height: 150px; */
 }
 
-.projects a img{
-    width: 20px;
-    opacity: 0.6;
-    vertical-align: middle;
-    margin: -2px 10px 0 0;
-    /* border: 1px solid black; */
-}
 
 .projects a{
-    display: block;
-    justify-content: left;
+    box-sizing: border-box;
+    display: flex;
+    /* flex-direction: column; */
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
     text-decoration: none;
-    padding: 5px 0;
+    /* padding: 5px 0; */
     flex-wrap: nowrap;
     text-align: left;
-    height: 18px;
-    width: 100%;
-    color: black;
-    font-weight: 400;
-    font-size: 12pt;
-    letter-spacing: 1px;
-    /* font-family: Helvetica, Arial, sans-serif; */
+    height: 20px;
+    width: 20px;
+    /* font-family: var(--sansSerifFont);; */
     /* border: 1px solid black; */
+    /* padding: 10px; */
+    background-clip: padding-box;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: transform 0.2s ease-in-out;
 }
 
-.projects a span{
+.viewLive{
+    background-image: url("Assets/eye_icon.svg");
+}
+
+.learnMore{
+    background-image: url("Assets/read_more.svg");
+    margin-left: 10px;
+    margin-right: 14px;
+}
+
+.githubLink{
+    background-image: url("Assets/GitHub_icon.png");
+}
+
+.projects a:nth-of-type(2){
+    border-right: none;
+    border-left: none;
+}
+
+/* .projects a span{
     transition: text-decoration 0.2s ease-in-out;
+} */
+
+/* .projects a img{
+    height: 20px;
+    opacity: 0.8;
+    vertical-align: middle;
+    transition: transform 0.2s ease-in-out;
+    position: relative;
+} */
+
+.projects a:hover{
+    transform: scale(1.2);
 }
 
-.projects a:hover span,
+/* .projects a:hover span,
 .projects a:active span,
 .projects a:focus span{
     color: black;
@@ -576,9 +628,39 @@ header nav a div{
 .projects a:visited span{
     color: rgb(71, 71, 71);
     text-decoration: underline solid 2.5px  rgb(105, 105, 105);
+} */
+
+
+.linksLabelDiv{
+    display: none;
+    /* display: flex; */
+    flex-direction: column;
+    flex-wrap: nowrap;
+    position: relative;
+    top: 3px;
 }
 
-.carrot{
+.triangle{
+    /* display: none; */
+    width: 20px;
+    margin: 0;
+    position: relative;
+    /* left: 12.5px; */
+}
+
+.linkText{
+    font-family: var(--serifFont);
+    color: black;
+    font-weight: 300;
+    font-size: 10pt;
+    letter-spacing: 1.5px;
+    background-color:rgb(0, 0, 0);
+    color: white;
+    padding: 5px 9px 6px 9px;
+}
+
+
+/* .carrot{
     font-weight: 700;
 }
 
@@ -594,7 +676,7 @@ header nav a div{
 
 .learnMore{
     width: 29%;
-}
+} */
 
 .projects:nth-child(1){
     background-image: url(Assets/portfolio5_square.jpg);
@@ -652,7 +734,7 @@ header nav a div{
 }
 
 h3{
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: var(--sansSerifFont);;
     font-size: 2.25rem;
     margin: 0 0 75px 0;
     display: flex;
@@ -660,10 +742,11 @@ h3{
 }
 
 .stackSubHeading{
-    font-family: Helvetica, Arial, sans-serif;
+    appearance: none;
+    font-family: var(--sansSerifFont);;
     font-size: 16pt;
     font-weight: 600;
-    text-decoration: black underline 1px;
+    text-decoration: black solid underline 2px;
     margin: 0 0 7px 0.6rem;
 }
 
@@ -726,14 +809,14 @@ h3{
     margin: 0 auto;
 }
 
-h5{
-    font-family: Helvetica, Arial, sans-serif;
+#resume h5{
+    font-family: var(--sansSerifFont);;
     font-weight: 600;
     font-size: 18pt;
     margin-bottom: 5px;
 }
 
-h5:first-of-type{
+#resume h5:first-of-type{
     margin-top: 20px;
 }
 
@@ -771,7 +854,7 @@ h5:first-of-type{
 }
 
 #resume ul li{
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: var(--sansSerifFont);;
 }
 
 #resume ul li:nth-of-type(2n){
@@ -779,15 +862,15 @@ h5:first-of-type{
 }
 
 .resumeBold{
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: var(--sansSerifFont);;
     font-weight: 700;
     font-size: 13pt;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
 }
 
 .resumeSubheader{
-    letter-spacing: 0.5px;
-    font-size: 11.25pt;
+    letter-spacing: 0.75px;
+    font-size: 9pt;
     font-weight: 400;
 }
 
@@ -800,10 +883,10 @@ h5:first-of-type{
 }
 
 #resume ul .subBullets{
-    font-family: museo-slab, 'Courier New', monospace;
+    font-family: var(--sansSerifFont);
     font-weight: 300;
     font-size: 11pt;
-    letter-spacing: 0.5px;
+    letter-spacing: 0.25px;
 }
 
 /* ------------------- CONTACT ------------------- */
@@ -880,13 +963,14 @@ h5:first-of-type{
 #contactForm label {
     font-weight: 600;
     font-size: 14pt;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: var(--sansSerifFont);;
 }
 
 #submitButton {
+    appearance: none;
     font-size: 14pt;
     text-align: center;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: var(--sansSerifFont);;
     font-weight: 600;
     background-color: var(--baseYellow);
     /* padding: 12px 10px; */
@@ -896,15 +980,16 @@ h5:first-of-type{
     width: 100px;
     height: 50px;
     border-radius: 0%;
-    transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
+    transition: outline 0.2s ease-in-out, transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
 
 #submitButton:hover,
 #submitButton:active,
 #submitButton:focus {
-    transform: scale(1.02);
-    outline: none;
-    background-color: var(--drkYellow);
+    transform: scale(1.05);
+    /* border: 3px solid black; */
+    outline: 1px solid black;;
+    /* background-color: var(--drkYellow); */
 }
 
 /* ------------------- FOOTER ------------------- */
@@ -959,11 +1044,11 @@ footer nav a{
     text-decoration: none;
     color: black;
     font-weight: 700;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: var(--sansSerifFont);;
     font-size: 12pt;
     text-align: center;
     vertical-align: baseline;
-    transition: background-color 0.2s ease-in-out;
+    transition: background-color 0.3s ease-in-out;
 }
 
 
@@ -996,8 +1081,3 @@ footer a div{
     position: absolute;
     z-index: -1;
 }
-
-/* footer a:visited{
-    color: rgb(77, 77, 77);
-} */
-
